crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C420_C420_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C420 [*] Unnecessary dict comprehension for iterable; use `dict.fromkeys` instead
 --> C420_2.py:1:7
  |
1 | foo or{x: None for x in bar}
  |       ^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `dict.fromkeys(iterable, value)`)
  |
1 - foo or{x: None for x in bar}
1 + foo or dict.fromkeys(bar)
  |
